FIxed some bugs and changed the dependencies