@@ -13,7 +13,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/tracking")
@@ -64,7 +63,7 @@ public class TrackingController {
                 List<TrackingDetailsDTO> list = trackingDetailsService.getTrackingByOrderId(orderId)
                                 .stream()
                                 .map(this::convertToDTO)
-                                .collect(Collectors.toList());
+                                .toList();
 
                 return ResponseEntity.ok(
                                 new ApiResponse<>("Tracking details fetched successfully", list));
@@ -77,7 +76,7 @@ public class TrackingController {
                 List<TrackingDetailsDTO> list = trackingDetailsService.getAllTrackingDetails()
                                 .stream()
                                 .map(this::convertToDTO)
-                                .collect(Collectors.toList());
+                                .toList();
 
                 return ResponseEntity.ok(
                                 new ApiResponse<>("All tracking details fetched successfully", list));
